<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GreeterActivity"
    android:padding="@dimen/global_layoutpadding">

    <TextView
        android:id="@+id/tvIntroText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greeter_intro" />

    <Button
        android:id="@+id/btnOpenLengthConvActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/fi_length"
        android:text="@string/global_length"
        app:layout_constraintTop_toBottomOf="@id/tvIntroText" />

    <Button
        android:id="@+id/btnOpenSpeedConvActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/fi_speed"
        android:text="@string/global_speed"
        app:layout_constraintTop_toBottomOf="@id/btnOpenLengthConvActivity" />

    <Button
        android:id="@+id/btnOpenMassConvActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/fi_mass"
        android:text="@string/global_mass"
        app:layout_constraintTop_toBottomOf="@id/btnOpenSpeedConvActivity" />

    <Button
        android:id="@+id/btnOpenTemperatureConvActivtity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/fi_temperature"
        android:text="@string/global_temperature"
        app:layout_constraintTop_toBottomOf="@id/btnOpenMassConvActivity" />

</android.support.constraint.ConstraintLayout>